# simplestroke

./: .dir-locals.el  .gitignore  GNUmakefile  LICENSE  Makefile  Makefile.am  Makefile.common  README  README.md  astylerc  autogen.sh  capsicum_helpers.h  configure  configure.ac  db.c  db.h  recorder-sysmouse.c  recorder-x11.c  recorder-x11.h  recorder.h  simplestroke-daemon.1  simplestroke-daemon.c  simplestroke.1  simplestroke.c  simplestroke_delete.c  simplestroke_detect.c  simplestroke_export.c  simplestroke_list.c  simplestroke_new.c  simplestroke_record.c  stroke.c  stroke.h  tests.c  tracker.c  tracker.h  tracker_evdev.c  tracker_x11.c  util.c  util.h
docs/: Makefile.am  simplestroke.1
lib/xo/: xoversion.h
src/: Makefile.am  db.c  recorder-sysmouse.c  recorder-x11.c  recorder.h  simplestroke.c  simplestroke_delete.c  simplestroke_detect.c  simplestroke_export.c  simplestroke_list.c  simplestroke_new.c  stroke.c  stroke.h  tracker.c  tracker.h  util.c  util.h
